--- a/.github/workflows/angular.yaml
+++ b/.github/workflows/angular.yaml
@@ -17,14 +17,16 @@ jobs:
         node-version: [14.X]
         
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      - name: checkout code from master branch
+      - uses: actions/checkout@v3
+
+      - name: Setup Node.js environment
+      - uses: actions/setup-node@v3
+        with:
+         node-version: ${{ matrix.node-version }}
+         cache: 'npm'
       
-    - run: |
+      - run: |
           node --version
           npm --version
           npm i
