--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,11 +4,10 @@ phases:
   install:
     runtime-versions:
       nodejs: 16
-      
+
     commands:
-      - npm install
+      - npm ci
       - npm install -g @angular/cli
-      - npm install -g @angular-devkit/build-angular
 
   build:
     commands:
