--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,11 +2,13 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      nodejs: 16
-
     commands:
-      - npm ci
+     curl -sL https://deb.nodesource.com/setup_16.x | bash -
+     apt-get install -y nodejs
+  
+  pre_build:   
+    commands:
+      - npm install
       - npm install -g @angular/cli
 
   build:
