local last commit

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,8 @@ version: 0.2
 
 phases:
   install:
-    commands:
-     curl -sL https://deb.nodesource.com/setup_16.x | bash -
-     apt-get install -y nodejs
+    runtime-versions:
+      nodejs: 16
   
   pre_build:   
     commands:
